--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<h1>why are you here</h1>
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta http-equiv="refresh" content="0; URL=https://www.youtube.com/watch?v=wC58VdT0x4A">
+    <script>
+        window.location.href = "https://www.youtube.com/watch?v=wC58VdT0x4A";
+    </script></head></html>
