--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html><head>
     <script>
-        window.location.href = "https://www.youtube.com/watch?v=wC58VdT0x4A";
+        window.location.href = " websinkwastaken.github.io/yes.html";
     </script></head></html>
