--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<a href="../html-link.htm"><img src="flower.jpg" alt="Flower"></a>
+<a href="../html-link.htm"><img src="flower.png" alt="Flower"></a>
