--- a/test.html
+++ b/test.html
@@ -1,1 +1,8 @@
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
 <a href="../html-link.htm"><img src="flower.png" alt="Flower"></a>
