--- a/test.html
+++ b/test.html
@@ -2,7 +2,6 @@
 img {
   display: block;
   margin-left: auto;
-  margin-right: auto;
 }
 </style>
-<a href="../html-link.htm"><img src="flower.png" alt="Flower"></a>
+<a href="../html-link.htm"><img src="flower.png" alt="Do you hate sirhurt? join the fucking sirhurt haters LMao xd"></a>
