--- a/test.html
+++ b/test.html
@@ -4,4 +4,4 @@ img {
   margin-left: auto;
 }
 </style>
-<a href="../html-link.htm"><img src="flower.png" alt="Do you hate sirhurt? join the fucking sirhurt haters LMao xd"></a>
+<a href="../html-link.htm"><img src="ad.png" alt="Do you hate sirhurt? join the fucking sirhurt haters LMao xd"></a>
