--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <style>
 img {
-  margin-right: auto;
+  margin-right: 100%;
 }
 </style>
 <a href="../html-link.htm"><img src="ad.png" alt="Do you hate sirhurt? join the fucking sirhurt haters LMao xd"></a>
