--- a/test.html
+++ b/test.html
@@ -1,6 +1,3 @@
-<style>
-img {
-  margin-right: 100%;
-}
-</style>
-<a href="../html-link.htm"><img src="ad.png" alt="Do you hate sirhurt? join the fucking sirhurt haters LMao xd"></a>
+<a href="../html-link.htm"><img src="ad.png" title="White flower" alt="Flower"></a>
+<br>
+test
