--- a/test.html
+++ b/test.html
@@ -1,3 +1,10 @@
+<style>
+img {
+  display: block;
+
+  margin-right: auto;
+}
+  
 <a href="../html-link.htm"><img src="ad.png" title="White flower" alt="Flower"></a>
 <br>
 test
