--- a/test.html
+++ b/test.html
@@ -1,8 +1,10 @@
 <style>
 img {
+  display: block;
+  margin-left: auto;
 
-  margin-right: auto;
 }
+</style>
   
 <a href="../html-link.htm"><img src="ad.png" title="White flower" alt="Flower"></a>
 <br>
