--- a/test.html
+++ b/test.html
@@ -1,11 +1,10 @@
 <style>
 img {
-  display: block;
   margin-left: auto;
 
 }
 </style>
   
-<a href="../html-link.htm"><img src="ad.png" title="White flower" alt="Flower"></a>
+<a href="../html-link.htm"><img src="ad.png" title="join xd" alt="Flower"></a>
 <br>
 test
