--- a/test.html
+++ b/test.html
@@ -1,3 +1,1 @@
-<a href="../html-link.htm"><img src="ad.png" title="join xd" alt="Flower"></a>
-<br>
-test
+<img src="ad.png" alt="Smiley face" width="42" height="42" style="float:left">
