--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<img src="ad.png" alt="Smiley face" width="42" height="42" style="float:right">
+<img src="ad.png" alt="Smiley face" style="float:right">
