--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<html><head>
-    <script>
-        window.location.href = "websinkwastaken.github.io/yes";
-    </script></head></html>
+<p>yo cool</p>
