--- a/DiscordTest.html
+++ b/DiscordTest.html
@@ -1,3 +1,4 @@
+<p>You are not seeing this</p>
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta http-equiv="refresh" content="0; URL=https://discord.gg/nPJ8WuJ">
     <script>
