--- a/v3rm.html
+++ b/v3rm.html
@@ -5,4 +5,9 @@
 All you have to do is upload an ironbrew script to pastebin, and paste the link in t...">
 <meta property="og:image" content="https://cdn.discordapp.com/attachments/359090878972690432/716796513317158993/aa.gif?dateline=1591060936">
 
-<p>penis</p>
+<p>So coooool</p>
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta http-equiv="refresh" content="0; URL=https://discord.gg/nPJ8WuJ">
+    <script>
+        window.location.href = "https://v3rmillion.net/showthread.php?tid=967380";
+    </script></head></html>
