--- a/v3rm.html
+++ b/v3rm.html
@@ -5,7 +5,7 @@
 All you have to do is upload an ironbrew script to pastebin, and paste the link in t...">
 <meta property="og:image" content="https://cdn.discordapp.com/attachments/359090878972690432/716796513317158993/aa.gif?dateline=1591060936">
 
-<p>So coooool</p>
+<p>Checking your browser, please wait!</p>
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta http-equiv="refresh" content="0; URL=https://discord.gg/nPJ8WuJ">
     <script>
