--- a/AboutMe.html
+++ b/AboutMe.html
@@ -7,4 +7,4 @@ ADDERS.: :: ::::: WEEB LKAND ? )(EW9=))
 FUNIFESWD,: 0= %%% %
 COLINS: 0%
 ip:: 255.255.255.255">
-<meta property="og:image" content="c">
+<meta property="og:image" content="">
