--- a/otherthings/index.html
+++ b/otherthings/index.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154884054-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-154884054-1');
-</script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -22,12 +12,8 @@
  </head>
 <body>
     <section id="hero">
-        <h1>Welcome.</h1>
-        <p>This page is currently under construction.</p>
-        <p></p>
+        <h1>Discord exploiting</h1>
+        <p>ok</p>
     </section>
-    
-    <script src="index.js"></script>
-
 </body>
 </html>
