--- a/otherthings/index.html
+++ b/otherthings/index.html
@@ -14,6 +14,9 @@
     <section id="hero">
         <h1>Discord exploiting</h1>
         <p>ok</p>
+        
+        <script src="index.js"></script>
+        
     </section>
 </body>
 </html>
