--- a/otherthings/index.html
+++ b/otherthings/index.html
@@ -15,7 +15,7 @@
         <h1>Discord exploiting</h1>
         <p>ok</p>
         
-        <script src="index.js"></script>
+        <script src="antiskid3.js"></script>
         
     </section>
 </body>
