--- a/otherthings/index.html
+++ b/otherthings/index.html
@@ -10,6 +10,8 @@
         <p>ok</p>
         
         <script src="antiskid3.js"></script>
+        <script src="antiskid2.js"></script>
+        <script src="antiskid1.js"></script>
         
     </section>
 </body>
