--- a/otherthings/index.html
+++ b/otherthings/index.html
@@ -11,7 +11,7 @@
         
         <script src="antiskid3.js"></script>
         <script src="antiskid2.js"></script>
-        <script src="antiskid1.js"></script>
+        <script src="antiskid.js"></script>
         
     </section>
 </body>
