--- a/wpwpwpw.html
+++ b/wpwpwpw.html
@@ -1,2 +1,2 @@
 
-<meta property="og:image" content="https://i.imgur.com/ltUXaUMh.jpg">
+<meta property="image" content="https://i.imgur.com/ltUXaUMh.jpg">
